# MealPlanner

./: MealPlanner.cabal  test.csv
src/: Main  Main.hs  MealPlanner.hs  TomMurphy.hs  test.csv  try.hs
