name: MealPlanner
version: 0.0.1
cabal-version: >=1.2
build-type: Simple
license: AllRightsReserved
license-file: ""
description:
data-dir: ""
extra-source-files: ""

executable MealPlanner
    build-depends: QuickCheck -any, base -any, dimensional-dk -any, cassava -any, vector -any, bytestring -any
    main-is: Main.hs
    buildable: True
    hs-source-dirs: src
